# NoClick

./: .env  .gitignore  AI_MASTER_CONTEXT.md  CHANGELOG.md  No-Click_PPT.pptx  README.md  package-lock.json
.ipynb_checkpoints/: AI_MASTER_CONTEXT-checkpoint.md  CHANGELOG-checkpoint.md
backend/: .env.example  .gitignore  DB_GUIDE.md  main.py  noclick.db-shm  noclick.db-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py  002_add_dimension_scores.py
backend/app/: database.py
backend/app/api/: analysis.py
backend/app/core/: config.py  prompts.py
backend/app/core/.ipynb_checkpoints/: config-checkpoint.py
backend/app/core/prompts/: __init__.py  base.py  coupang.py  general.py  instagram.py  naver_store.py
backend/app/core/prompts/.ipynb_checkpoints/: base-checkpoint.py
backend/app/crud/: __init__.py
backend/app/models/: analysis.py
backend/app/schemas/: analysis.py
backend/app/services/: ai_engine.py  hf_engine.py
docs/: API_명세서.md  PPT_가이드.md  계획서.md
frontend/: .env.example  .gitignore  index.html  list.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Header.tsx  LoadingState.tsx  MockPlatformViewer.tsx
frontend/src/pages/: Analysis.tsx  History.tsx  Home.tsx  HowItWorks.tsx  Result.tsx
frontend/src/services/: api.ts  mockApi.ts
frontend/src/types/: analysis.ts
reference/: DESIGN.md  code.html  code2.html  code3.html  coupang.html  insta.html  naver.html  no_click_readme.md  review-site.html
(+11 files in other folders)
